# VoxtralTTS-UI

./: .gitignore  .wslconfig.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  WSL_SETUP.md  app.py  pyproject.toml
PREMIUM/: README.md  premium_app.py  premium_styles.py  premium_window.py
data/: README.md  config.example.json
packaging/: voxtral_studio.spec  voxtral_studio_premium.spec
scripts/: bootstrap_voxtral_wsl.ps1  build_exe.ps1  setup_and_run.ps1  setup_wsl2_ubuntu.ps1  start_wsl_voxtral_server.ps1  stop_wsl_voxtral_server.ps1  wsl_voxtral_status.ps1
src/voxtral_studio/: __init__.py  config.py  main.py  models.py
src/voxtral_studio/services/: __init__.py  audio_tools.py  server_manager.py  tts_client.py  voice_library.py
src/voxtral_studio/ui/: __init__.py  main_window.py  styles.py  workers.py
tests/: test_config.py  test_voice_library.py
wsl/: bootstrap_voxtral.sh  start_voxtral_server.sh  stop_voxtral_server.sh
